2012-04-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py (FeedWebView): Fixed a backslash escaping (issue #2).

2012-04-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py (FeedEventEntry.get_dict): Fixed a bug
	  that prevented showing user stream events.

2012-04-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5 release.

2012-04-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* it_IT.po: Updated Italian translation.  Thanks Daniele Napolitano!

2012-03-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks alexnmoya!

2012-03-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5 beta 1 release.
	* feedsource.py: Added an Options tab to Feed Source Dialog.

2012-03-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme
	  Barrientos!
	* theme.py: Added support for user theme directory.
	  (~/.config/gfeedline/theme/)

2012-03-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twittytwister/streaming.py: Added support for Twitter activity
	  streaming.

2012-03-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.1 beta 1 release.
	* it_IT.po: Added new Italian translation.  Thanks Daniele Napolitano!
	* et.po: Updated Estonian translation.  Thanks Rivo Zängov!

2012-03-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twittytwister/twitter.py, twittytwister/txml.py: Added supoort
	  for help/configuration API.

2012-03-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py, window.py: Added support for Drag and Drop image files.

2012-03-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py: Added support for image uploading.
	* twitter/account.py, twittytwister/twitter.py: Added support for
	  'update_with_image'.

2012-03-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py: Added support for fullscreen mode.
	* twitter/output.py, window.py: Save last IDs for cheking unread.